<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="@dimen/dp_88"
            android:layout_height="@dimen/dp_88"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@mipmap/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/wx_login_btn"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@mipmap/wx_login"
            android:onClick="@{viewModel.onClick}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_other" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login_title_text"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImg" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:onClick="@{viewModel.onClickRegister}"
            android:text="@string/login_register_text"
            android:textColor="@color/login_color_333333"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toStartOf="@id/edit_verification_code"
            app:layout_constraintTop_toBottomOf="@id/edit_verification_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/login_forgot_password"
            android:textColor="@color/login_color_333333"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="@id/edit_verification_code"
            app:layout_constraintTop_toBottomOf="@id/edit_verification_code" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_68"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/login_select_btn_bg"
            android:enabled="false"
            android:gravity="center"
            android:onClick="@{v->viewModel.onClickLogin(inputPhone,inputPassword)}"
            android:text="@string/login_btn_text"
            android:textColor="@color/login_select_btn_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@id/edit_verification_code" />

        <TextView
            android:id="@+id/tv_protocols_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginEnd="30dp"
            android:text="@string/login_protocols_private"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <TextView
            android:id="@+id/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_27"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/login_other"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <View
            android:id="@+id/line1"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@color/login_line_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <View
            android:id="@+id/line2"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintTop_toBottomOf="@+id/edit_verification_code" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintTop_toBottomOf="@+id/edit_account" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_verification_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/login_code_hint_text"
            android:inputType="number"
            android:text="@={inputPassword}"
            android:textColor="@color/login_verification_code_color"
            android:textColorHint="@color/login_verification_code_hint_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/edit_account" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/login_account_hint_text"
            android:inputType="phone"
            android:text="@={inputPhone}"
            android:textColor="@color/login_account_color"
            android:textColorHint="@color/login_account_hint_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

    </android.support.constraint.ConstraintLayout>


    <data>

        <variable
            name="viewModel"
            type="com.bldby.loginlibrary.ui.LoginActivity" />

        <variable
            name="inputPhone"
            type="String" />

        <variable
            name="inputPassword"
            type="String" />

    </data>
</layout>