<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/checkbox"
            style="@style/login_MyCheckBox"
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <ImageView
            android:id="@+id/wx_login_btn"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@mipmap/wx_login"
            android:onClick="@{viewModel.onWeChantLogin}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_other" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/login_wx_btn_text"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wx_login_btn" />

        <TextView
            android:id="@+id/btn_code"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_28"
            android:background="@drawable/login_select_biding_btn"
            android:gravity="center"
            android:onClick="@{v->viewModel.getCode(phone)}"
            android:text="@string/login_biding_get_code"
            android:textColor="@color/login_select_biding_code_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBaseline_toBaselineOf="@id/edit_verification_code"
            app:layout_constraintLeft_toRightOf="@id/edit_verification_code"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_register_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text=""
            android:textColor="@color/register_error_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@id/edit_verification_code"
            app:layout_constraintTop_toBottomOf="@id/edit_verification_code" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_125"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/login_select_btn_bg"
            android:enabled="false"
            android:gravity="center"
            android:onClick="@{v->viewModel.onClickRegister(phone,code)}"
            android:text="@string/login_btn_text"
            android:textColor="@color/login_select_btn_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@id/tv_register_error" />

        <TextView
            android:id="@+id/tv_protocols_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_protocols_private"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/checkbox"
            app:layout_constraintLeft_toRightOf="@id/checkbox"
            app:layout_constraintTop_toTopOf="@id/checkbox" />

        <TextView
            android:id="@+id/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_63"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/login_other"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintTop_toBottomOf="@id/edit_biding_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintTop_toBottomOf="@id/edit_verification_code" />

        <View
            android:id="@+id/line1"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_71"
            android:background="@color/login_line_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <View
            android:id="@+id/line2"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_71"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_biding_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_54"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/login_biding_account_hint_text"
            android:inputType="phone"
            android:text="@={phone}"
            android:textColor="@color/login_account_color"
            android:textColorHint="@color/login_account_hint_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_verification_code"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/login_biding_code_hint_text"
            android:inputType="number"
            android:text="@={code}"
            android:textColor="@color/login_verification_code_color"
            android:textColorHint="@color/login_verification_code_hint_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_biding_account" />
    </android.support.constraint.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.bldby.loginlibrary.ui.RegisterActivity" />

        <variable
            name="phone"
            type="String" />

        <variable
            name="code"
            type="String" />

    </data>
</layout>