<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <CheckBox
            android:id="@+id/checkbox"
            style="@style/login_MyCheckBox"
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="@dimen/dp_88"
            android:layout_height="@dimen/dp_88"
            android:layout_marginTop="@dimen/dp_64"
            android:background="@mipmap/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/account_login_btn"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@mipmap/login_phone"
            android:onClick="@{viewModel.onPhoneLogin}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_other" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login_wx_title_text"
            android:textColor="@color/login_wx_title_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImg" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_112"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/login_shape_wx_btn_bg"
            android:gravity="center"
            android:onClick="@{viewModel.weChantAuth}"
            android:text="@string/login_wx_btn_text"
            android:textColor="@color/login_select_btn_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

        <TextView
            android:id="@+id/tv_protocols_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_wx_protocols_private"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="@id/checkbox"
            app:layout_constraintLeft_toRightOf="@id/checkbox"
            app:layout_constraintTop_toTopOf="@id/checkbox" />


        <TextView
            android:id="@+id/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_63"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/login_other"
            android:textColor="@color/login_color_999999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/login_wx_text"
            android:textColor="@color/login_wx_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_login_btn" />

        <View
            android:id="@+id/line1"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginStart="@dimen/dp_30"
            app:layout_constraintBottom_toBottomOf="@id/login_other"
            app:layout_constraintTop_toTopOf="@id/login_other"
            android:background="@color/login_line_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />

        <View
            android:id="@+id/line2"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_0_5"
            app:layout_constraintBottom_toBottomOf="@id/login_other"
            app:layout_constraintTop_toTopOf="@id/login_other"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_protocols_private" />


    </android.support.constraint.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.bldby.loginlibrary.ui.WeChantLoginActivity" />

    </data>
</layout>