<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ResourceName">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/btn_code"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_28"
            android:background="@drawable/login_select_biding_btn"
            android:gravity="center"
            android:onClick="@{v->viewModel.getCode(phone)}"
            android:text="@string/login_biding_get_code"
            android:textColor="@color/login_select_biding_code_color"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBaseline_toBaselineOf="@id/edit_verification_code"
            app:layout_constraintLeft_toRightOf="@id/edit_verification_code"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_140"
            android:background="@drawable/login_select_btn_bg"
            android:enabled="false"
            android:gravity="center"
            android:onClick="@{v->viewModel.onBidingAccount(phone,code)}"
            android:text="@string/login_btn_text"
            android:textColor="@color/login_select_btn_text"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintTop_toBottomOf="@id/edit_biding_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@color/login_line_color"
            app:layout_constraintTop_toBottomOf="@id/edit_verification_code" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_biding_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_54"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/login_biding_account_hint_text"
            android:inputType="phone"
            android:text="@={phone}"
            android:textColor="@color/login_account_color"
            android:textColorHint="@color/login_account_hint_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_verification_code"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_47"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@null"
            android:gravity="start|center_vertical"
            android:hint="@string/login_biding_code_hint_text"
            android:inputType="number"
            android:text="@={code}"
            android:textColor="@color/login_verification_code_color"
            android:textColorHint="@color/login_verification_code_hint_color"
            android:textSize="@dimen/sp_14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_biding_account" />

    </android.support.constraint.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.bldby.loginlibrary.ui.BindingAccountActivity" />

        <variable
            name="phone"
            type="String" />

        <variable
            name="code"
            type="String" />

    </data>

</layout>
